# axiom

./: .axignore.example  .gitignore  .gitmodules  .mcp.json  20251227_084042_approved.toml  20251227_105014_approved.toml  ARCHITECTURE.md  LICENSE  QUICKSTART.md  README.md  SESSION_CONTEXT.md  docker-compose.yml  pyproject.toml  todo.md
.claude/: CLAUDE.md
.github/workflows/: ci.yml
axiom/: __init__.py
axiom/api/: __init__.py  main.py  models.py
axiom/extractors/: __init__.py  c_signatures.py  clang_loader.py  comment_annotations.py  content_generator.py  enricher.py  error_codes.py  error_linker.py  k_dependencies.py  k_pairings.py  k_semantics.py  library_depends_on.py  linker.py  prompts.py  propagation.py  semantic_linker.py
axiom/graph/: __init__.py  loader.py  schema.py
axiom/ingestion/: __init__.py  extractor.py  kb_integrator.py  prompts.py  reviewer.py  subgraph_builder.py
axiom/mcp/: __init__.py  server.py
axiom/models/: __init__.py  axiom.py  operation.py  pairing.py
axiom/reasoning/: __init__.py  contradiction.py  entailment.py  proof_chain.py  validator.py
axiom/vectors/: __init__.py  loader.py
docs/: axiom-mcp-benefits-conversation.md  axiom-mcp-claude-code-conversation.md  cpp20-extraction-engine.md  cpp_embedder_analysis.md  extraction-order.md  foundation-layers.md  graph-export.html  ingestion-speedup-plan.md  mcp-test-report.md  semantic_linking_analysis_gtest.md  small-model-training.md  terminology-refactor.md
docs/plans/: clangd-plugin-integration.md
docs/whitepaper/: axiom-grounded-truth-for-llms.md
knowledge/foundations/: c11_axioms.json  c11_core.toml  c11_stdlib.toml  cpp20_language.toml  cpp20_stdlib.toml  cpp_core.toml  cpp_stdlib.toml
knowledge/libraries/: gtest.toml  ilp_for.toml
knowledge/pairings/: cpp20_stdlib.toml  gtest.axiom.toml
scripts/: bootstrap.py  enrich_axioms.py  export_graph.py  extract_clang.py  extract_cpp20.py  extract_library.py  extract_stdlib.py  ingest.py  ingest_library.py  ingest_stdlib.py  install-mcp.sh  link_axioms.py  link_depends_on.py  link_semantic.py  load_pairings.py  review_axioms.py
tests/: __init__.py  conftest.py  test_bugfixes.py
tests/test_extractors/: test_axiom_toml_discovery.py  test_c_signatures.py  test_clang_extract_linking.py  test_clang_loader.py  test_clang_refinement.py  test_comment_annotations.py  test_content_generator.py  test_effect_detector.py  test_enricher.py  test_error_codes.py  test_error_linker.py  test_k_dependencies.py  test_k_pairings.py  test_k_semantics.py  test_library_depends_on.py  test_linker.py  test_llm_refiner.py  test_macro_semantics.py  test_postcondition_complexity.py  test_propagation.py  test_semantic_linker.py  test_static_patterns.py  test_template_constraints.py  test_test_miner.py  test_toml_pairings.py
tests/test_graph/: __init__.py  test_pairing_relationships.py
tests/test_ingestion/: test_extractor.py  test_kb_integrator.py  test_reviewer.py  test_subgraph_builder.py
tests/test_models/: __init__.py  test_axiom.py  test_pairing.py
tests/test_reasoning/: __init__.py  test_entailment.py  test_validator_integration.py
tests/test_vectors/: test_search_pairings.py
tools/axiom-extract/: CMakeLists.txt
tools/axiom-extract/include/: Axiom.h  Extractors.h  IgnoreFilter.h  SignatureBuilder.h
tools/axiom-extract/src/: CallGraphExtractor.cpp  ConstraintExtractor.cpp  EffectDetector.cpp  FunctionExtractor.cpp  GuardAnalyzer.cpp  HazardDetector.cpp  JsonEmitter.cpp  MacroExtractor.cpp  SignatureBuilder.cpp  TestAssertExtractor.cpp  main.cpp
tools/axiom-extract/tests/: CMakeLists.txt  test_constraint_extractor.cpp  test_effect_detector.cpp  test_hazard_detector.cpp  test_macro_extractor.cpp  test_signature_builder.cpp
