[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "axiom"
version = "0.1.0"
description = "Grounded truth validation for LLMs using formal axioms"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "mattyv", email = "your.email@example.com"}
]
keywords = ["llm", "validation", "axioms", "knowledge-graph", "rag"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    # K Framework parser
    "pyk>=0.3.2",

    # Data validation
    "pydantic>=2.5.0",

    # Data processing
    "pandas>=2.1.0",
    "numpy>=1.26.0",

    # Web scraping
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "toml>=0.10.0",  # For TOML writing (tomllib only reads)
]

[project.optional-dependencies]
# Heavy optional dependencies - install with: pip install -e ".[full]"
full = [
    # Graph database
    "neo4j>=5.15.0",
    # Vector database
    "lancedb>=0.4.0",
    # Embeddings
    "sentence-transformers>=2.2.0",
    # API
    "fastapi>=0.108.0",
    "uvicorn[standard]>=0.25.0",
    # MCP (Model Context Protocol)
    "mcp>=1.0.0",
]

dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "ipython>=8.18.0",
    "ipdb>=0.13.0",
]

test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    # Tree-sitter for ingestion tests
    "tree-sitter>=0.21.0",
    "tree-sitter-c>=0.21.0",
    "tree-sitter-cpp>=0.21.0",
]

[project.scripts]
axiom-api = "axiom.api.main:run"
axiom-mcp = "axiom.mcp.server:main"
axiom-extract = "scripts.extract_all:main"
axiom-bootstrap = "scripts.bootstrap:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["axiom*", "scripts*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
    "--cov=axiom",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.coverage.run]
source = ["axiom"]
omit = ["tests/*", "scripts/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
